--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -35,18 +35,15 @@
             android:layout_gravity="center"
             android:weightSum="2"
             android:layout_marginHorizontal="20dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <LinearLayout
-
                 android:layout_width= "wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="1"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
-
                 >
                 <ImageView
-
-                    android:layout_width="30dp"
+                    android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/luotxem"/>
                 <TextView
@@ -61,14 +58,13 @@
             </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
+                android:layout_gravity="center"
                 android:layout_width= "wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 >
                 <ImageView
-                    android:layout_width="50dp"
+                    android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:layout_gravity=""
                     android:src="@drawable/yeu"/>
                 <TextView
                     android:layout_weight="1"
