--- a/app/src/main/res/drawable/bl_bg.xml
+++ b/app/src/main/res/drawable/bl_bg.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
-
-    <stroke android:width="2dp" android:color="#F47474"/>
+    <stroke android:width="10dp" android:color="#000000"/>
 </shape>
