--- a/app/src/main/res/layout/item_binh_luan.xml
+++ b/app/src/main/res/layout/item_binh_luan.xml
@@ -1,36 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bl_bg"
-    android:padding="10dp"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+
+    android:orientation="vertical"
+    android:padding="10dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:id="@+id/ln1"
             android:layout_height="wrap_content"
-            android:text="Username"
-            android:textSize="20dp"
-            android:id="@+id/iteam_bl_user"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/iteam_bl_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/iteam_bl_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:text="time" />
+
+
+        </LinearLayout>
+
         <TextView
+            android:id="@+id/iteam_bl_nd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="time"
             android:layout_gravity="center"
-            android:id="@+id/iteam_bl_time"
-            android:gravity="right"/>
-
-
+            android:background="@drawable/item_bg"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="8dp"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="8dp"
+            android:text="nội dung"
+            android:textSize="16dp" />
     </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="nội dung"
-        android:id="@+id/iteam_bl_nd"/>
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
