--- a/app/src/main/res/layout/activity_doc_truyen.xml
+++ b/app/src/main/res/layout/activity_doc_truyen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".MainActivity_DocTruyen">
+    tools:context=".Activity.MainActivity_DocTruyen">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
