--- a/app/src/main/res/layout/activity_info_truyen.xml
+++ b/app/src/main/res/layout/activity_info_truyen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    tools:context=".MainActivity_ThongTinTruyen">
+    tools:context=".Activity.MainActivity_ThongTinTruyen">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -114,18 +114,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/truyen_btn_doc"
-                android:text="đọc "/>
+                android:text="đọc truyện"/>
 
-            <Button
+
+            <LinearLayout
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:layout_marginHorizontal="20dp"
                 android:layout_width="wrap_content"
                 android:background="@drawable/buttom_bg2"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/truyen_btn_yeuthich"
-                android:text="yêu thích "/>
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="-20dp"
+                    android:layout_marginRight="-20dp"
+                    android:src="@drawable/checkboxtrue">
 
+                </ImageView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="-40dp"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:text="YÊU THÍCH"/>
+            </LinearLayout>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
