--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,7 +32,7 @@
             android:layout_width="40dp"
             android:layout_marginRight="10dp"
             android:layout_height="40dp"
-            android:src="@drawable/cmt">
+            android:src="@drawable/ic_notifications_black_24dp">
 
         </ImageView>
     </LinearLayout>
