--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
+        android:id="@+id/lnear1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,8 +16,9 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:id="@+id/iteam_img"
+            android:scaleType = "centerCrop"
             android:src="@drawable/ic_launcher_background"
             android:layout_gravity="center"/>
         <TextView
