--- a/app/src/main/res/layout/fragment_ca_nhan.xml
+++ b/app/src/main/res/layout/fragment_ca_nhan.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="1000dp"
     tools:context=".Fragment.CaNhan_Fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
-        android:orientation="vertical">
+        android:paddingTop="100dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="24dp">
 
         <LinearLayout
-            android:layout_marginTop="40dp"
             android:id="@+id/lnlo_canhan_DMK"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="3"
+            android:layout_height="80dp"
             android:background="@drawable/item_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="3">
+
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/cmt"/>
+                android:src="@drawable/doimk" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textSize="27dp"
                 android:layout_gravity="center"
-                android:text=" ĐỔI MẬT KHẨU"/>
+                android:layout_weight="2"
+                android:text=" ĐỔI MẬT KHẨU"
+                android:textSize="27dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="40dp"
             android:id="@+id/lnlo_canhan_DX"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="3"
+            android:layout_height="80dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/item_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="3">
+
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/cmt"/>
+                android:src="@drawable/logout" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textSize="27dp"
                 android:layout_gravity="center"
-                android:text=" ĐĂNG XUẤT"/>
+                android:layout_weight="2"
+                android:text=" ĐĂNG XUẤT"
+                android:textSize="27dp" />
         </LinearLayout>
 
     </LinearLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
