--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,10 +29,10 @@
             android:text="Tên người dùng" />
         <ImageView
             android:layout_gravity="center"
-            android:layout_width="40dp"
+            android:layout_width="30dp"
             android:layout_marginRight="10dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_notifications_black_24dp">
+            android:layout_height="30dp"
+            android:src="@drawable/thongbao1">
 
         </ImageView>
     </LinearLayout>
