--- a/app/src/main/res/layout/fragment_yeu_thich.xml
+++ b/app/src/main/res/layout/fragment_yeu_thich.xml
@@ -8,11 +8,11 @@
     <!-- TODO: Update blank fragment layout -->
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:numColumns="1"
 
         android:verticalSpacing="10dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="120dp"
         android:id="@+id/gv_YT"/>
 
 </FrameLayout>
