--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,6 +32,7 @@
             android:layout_width="30dp"
             android:layout_marginRight="10dp"
             android:layout_height="30dp"
+            android:id="@+id/img_thongbao"
             android:src="@drawable/thongbao1">
 
         </ImageView>
