--- a/app/src/main/res/layout/activity_info_truyen.xml
+++ b/app/src/main/res/layout/activity_info_truyen.xml
@@ -27,7 +27,7 @@
                 android:layout_width="200dp"
                 android:layout_height="300dp"
                 android:id="@+id/img_anhbia"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/loading" />
             <LinearLayout
                 android:layout_marginLeft="20dp"
                 android:layout_width="match_parent"
