--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -31,6 +31,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:hint="Mật Khẩu"
                 android:id="@+id/edt_dn_password"
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -40,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="QUÊN MẬT KHẨU ???"
+
             android:gravity="right"
             android:id="@+id/tv_dn_qmk"/>
         <Button
