--- a/app/src/main/res/layout/item_trangtruyen.xml
+++ b/app/src/main/res/layout/item_trangtruyen.xml
@@ -8,7 +8,7 @@
         android:id="@+id/iteam_trangtruyen_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/loading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
